--- a/our-history.html
+++ b/our-history.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
+    <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="img/BrainyKids-logo.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/BrainyKids-logo.png">
+    <link href="img/favicon.ico" rel="icon">
+
+    <!-- Meta Tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brainy Kids - Центр дитячого розвитку, Вінниця. Підготовка до школи, дошколярик, англійська для дошкільнят, логопед.</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
 
-    <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <!-- SEO Meta Tags -->
+    <title>Brainy Kids - Центр дитячого розвитку у Вінниці | Підготовка до школи, англійська, логопед</title>
+    <meta name="description" content="Brainy Kids - сучасний центр розвитку дітей у Вінниці. Підготовка до школи, дошколярик, англійська для дошкільнят, логопед. Запишіться вже сьогодні!">
+    <meta name="keywords" content="Brainy Kids, центр розвитку дітей, дошколярик, логопед, англійська для дошкільнят, підготовка до школи, ранній розвиток, Вінниця">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph (Social Sharing) -->
+    <meta property="og:title" content="Brainy Kids - Центр дитячого розвитку у Вінниці">
+    <meta property="og:description" content="Підготовка до школи, дошколярик, англійська, логопед. Ваша дитина заслуговує найкраще навчання!">
+    <meta property="og:image" content="img/BrainyKids-logo.png">
+    <meta property="og:url" content="https://yourwebsite.com">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Brainy Kids - Центр дитячого розвитку у Вінниці">
+    <meta name="twitter:description" content="Найкраща підготовка до школи, логопед, англійська для дошкільнят у Вінниці">
+    <meta name="twitter:image" content="img/BrainyKids-logo.png">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Inter:wght@600&family=Lobster+Two:wght@700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Inter:wght@600&family=Lobster+Two:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -54,43 +69,44 @@
 
 
         <!-- Navbar Start -->
-        <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5 py-lg-0">
+        <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top px-4 px-lg-5 py-lg-0" role="navigation" aria-label="Головне меню сайту">
             <a href="index.html" class="navbar-brand">
                 <h1 class="m-0 text-primary">
-                    <img class="img-fluid rounded" src="img/BrainyKids-logo.png" alt="BrainyKids-logo">
+                    <img class="img-fluid rounded" src="img/BrainyKids-logo.png" alt="Brainy Kids - Центр дитячого розвитку">
                 </h1>
             </a>
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-label="Перемикання навігації">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav mx-auto">
-                    <a href="index.html" class="nav-item nav-link">Головна</a>
-                    <a href="about.html" class="nav-item nav-link">Про нас</a>
-                    <a href="classes.html" class="nav-item nav-link">Заняття</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Меню</a>
-                        <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0">
-                            <a href="facility.html" class="dropdown-item">Наші суперсили</a>
-                            <a href="our-history.html" class="dropdown-item active">Наша історія</a>
-                            <a href="appointment.html" class="dropdown-item">Залишити заявку</a>
-                            <a href="testimonial.html" class="dropdown-item">Відгуки</a>
-                        </div>
-                    </div>
-                    <a href="contact.html" class="nav-item nav-link">Контакти</a>
-                </div>
-                    <a id="socialModal" class="btn btn-primary rounded-pill px-3 d-none d-lg-block">З нами цікаво<i class="fas fa-share-alt ms-3"></i></a>
+                <ul class="navbar-nav mx-auto">
+                    <li class="nav-item"><a href="index.html" class="nav-link">Головна</a></li>
+                    <li class="nav-item"><a href="about.html" class="nav-link">Про нас</a></li>
+                    <li class="nav-item"><a href="classes.html" class="nav-link">Заняття</a></li>
+                    <li class="nav-item dropdown">
+                        <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Меню</a>
+                        <ul class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0">
+                            <li><a href="facility.html" class="dropdown-item">Наші суперсили</a></li>
+                            <li><a href="our-history.html" class="dropdown-item active">Наша історія</a></li>
+                            <li><a href="appointment.html" class="dropdown-item">Залишити заявку</a></li>
+                            <li><a href="testimonial.html" class="dropdown-item">Відгуки</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item"><a href="contact.html" class="nav-link">Контакти</a></li>
+                </ul>
+                <a id="socialModal" class="btn btn-primary rounded-pill px-3 d-none d-lg-block" aria-label="Поділитися Brainy Kids">
+                    З нами цікаво <i class="fas fa-share-alt ms-3"></i>
+                </a>
             </div>
         </nav>
         <!-- Navbar End -->
 
-
-        <!-- Page Header End -->
-        <div class="container-xxl py-5 page-header position-relative mb-5">
+        <!-- Page Header Start -->
+        <div class="container-xxl py-5 page-header position-relative mb-5" role="region" aria-label="Наша історія">
             <div class="container py-5">
                 <h1 class="display-2 text-white animated slideInDown mb-4">Наша історія</h1>
-                <nav aria-label="breadcrumb animated slideInDown">
-                    <ol class="breadcrumb">
+                <nav aria-label="Breadcrumb Navigation">
+                    <ol class="breadcrumb animated slideInDown">
                         <li class="breadcrumb-item"><a href="index.html">Головна</a></li>
                         <li class="breadcrumb-item"><a href="#">Меню</a></li>
                         <li class="breadcrumb-item text-white active" aria-current="page">Наша історія</li>
@@ -100,7 +116,6 @@
         </div>
         <!-- Page Header End -->
 
-
         <!-- Our-history Start -->
         <div class="container-xxl py-5">
             <div class="container">
@@ -108,7 +123,7 @@
                     <div class="row g-0">
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s" style="min-height: 50rem;">
                             <div class="position-relative h-100">
-                                <img class="position-absolute w-100 h-100 rounded" src="img/our-history_2.jpg"
+                                <img class="position-absolute w-100 h-100 rounded" src="img/our-history_2.jpg" alt="Brainy Kids - Історія створення"
                                     style="object-fit: cover;">
                             </div>
                         </div>
@@ -149,7 +164,7 @@
                                     потенціал кожної дитини, у їхню природну допитливість та прагнення до знань.
 
                                 </p>
-                                <a class="btn btn-primary py-3 px-5" href="appointment.html">Записатись на курс<i
+                                <a class="btn btn-primary py-3 px-5" href="appointment.html" aria-label="Записатися на курс Brainy Kids">Записатись на курс<i
                                         class="fa fa-arrow-right ms-2"></i></a>
                             </div>
                         </div>
@@ -167,33 +182,25 @@
                     <div class="col-lg-3 col-md-6">
                         <h3 class="text-white mb-4">Зв'язатись з нами</h3>
                         <p class="mb-2">
-                            <a href="https://www.google.com/maps?q=Пр.+Юності,+14+А,+Вінниця,+Україна" target="_blank" style="text-decoration: none; color: inherit;">
+                            <a href="https://www.google.com/maps?q=Пр.+Юності,+14+А,+Вінниця,+Україна" target="_blank" aria-label="Локація Brainy Kids у Вінниці" style="text-decoration: none; color: inherit;">
                                 <i class="fa fa-map-marker-alt me-3"></i>Пр. Юності, 14 А, Вінниця, Україна
                             </a>
                         </p>                        
                         <p class="mb-2">
-                            <a href="tel:+380966987178" style="text-decoration: none; color: inherit;">
+                            <a href="tel:+380966987178" aria-label="Зателефонувати до Brainy Kids" style="text-decoration: none; color: inherit;">
                                 <i class="fa fa-phone-alt me-3"></i>+38 096 698 71 78
                             </a>
                         </p>                        
                         <p class="mb-2">
-                            <a href="mailto:brainykids.vn@gmail.com" style="text-decoration: none; color: inherit;">
+                            <a href="mailto:brainykids.vn@gmail.com" aria-label="Написати на email Brainy Kids" style="text-decoration: none; color: inherit;">
                                 <i class="fa fa-envelope me-3"></i>brainykids.vn@gmail.com
                             </a>
                         </p>                        
                         <div class="d-flex pt-2">
-                            <a class="btn btn-outline-light btn-social" 
-                            href="https://www.instagram.com/brainy_kids_vn?igsh=amp3ODhtYW81ZjB5"><i class="fab fa-instagram"></i>
-                            </a>
-                            <a class="btn btn-outline-light btn-social" 
-                            href="https://www.facebook.com/share/16Bw61kLCU/"><i class="fab fa-facebook-f"></i>
-                            </a>
-                            <a class="btn btn-outline-light btn-social" 
-                            href="https://www.tiktok.com/@.brainy.kids?_t=ZM-8wD4I3RKgsQ&_r=1"><i class="fab fa-tiktok"></i>
-                            </a>
-                            <a class="btn btn-outline-light btn-social" 
-                            href="https://telegram.im/@brainykids_vn"><i class="fab fa-telegram-plane"></i>
-                            </a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/brainy_kids_vn" aria-label="Instagram Brainy Kids"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/share/16Bw61kLCU/" aria-label="Facebook Brainy Kids"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://www.tiktok.com/@.brainy.kids" aria-label="TikTok Brainy Kids"><i class="fab fa-tiktok"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="https://telegram.im/@brainykids_vn" aria-label="Telegram Brainy Kids"><i class="fab fa-telegram-plane"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
@@ -205,7 +212,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h3 class="text-white mb-4">Фото галерея</h3>
-                        <div class="row g-2 pt-2">
+                        <div class="row g-2 pt-2" role="region" aria-label="Фото галерея Brainy Kids" style="cursor: pointer;">
                             <div class="col-4">
                                 <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-1.jpg" onclick="openModal(0)" alt="Brainy Kids/gallery_01">
                             </div>
@@ -239,23 +246,9 @@
                         <h3 class="text-white mb-4">Залиште номер телефону</h3>
                         <p>Ми з Вами зв'яжемось.</p>
                         <div class="position-relative mx-auto">
-                            <input id="phone" class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your phone number">
+                            <input id="phone" class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Ваш номер телефону">
                             <button class="btn btn-primary py-2 mt-2" onclick="sendPhoneNumber()">Надіслати</button>
                         </div>                
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="copyright">
-                    <div class="row">
-                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="" href="#">BrainyKids </a>, All Right Reserved
-                        </div>
-                        <div class="col-md-6 text-center text-md-end">
-                            <div class="footer-menu">
-                                <a href="index.html">На головну</a>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
